# Agent-Drift

./: .mailmap  README.md  openclaw-patch.js  pyproject.toml  requirements.txt  setup-openclaw.py  setup-openclaw.sh  setup.py
agent_drift_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: custom_agent_integration.py  monitor_openclaw.py  openclaw_native.py
src/: __init__.py  baseline.py  canary.py  cli.py  detector.py  honeypot.py  listener.py  models.py  monitor.py  owasp.py  shim.py  vectorizer.py
src/dashboard/: __init__.py  server.py
src/dashboard/static/css/: dashboard.css
src/dashboard/static/js/: dashboard.js
src/dashboard/templates/: dashboard.html
tests/: __init__.py  test_baseline.py  test_canary.py  test_comprehensive.py  test_detector.py  test_detector_unit.py  test_honeypot.py  test_owasp.py  test_vectorizer.py  test_vectorizer_unit.py
